Atualizando Icon png

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link type="image/png" sizes="96x96" rel="icon" href="/icons8-código-fonte-96.png">
+    <link type="image/png" sizes="96x96" rel="icon" href="/public/icons8-código-fonte-96.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
